public/commons.css
body {
  margin: 0;
}

* {
  box-sizing: border-box;
  font-family: "Roboto", sans-serif;
}

p {
  line-height: 1.7;
}

a {
  color: inherit;
  font-weight: bold;
}

li {
  margin-bottom: 15px;
}

button {
  background-color: black;
  color: white;
  font-weight: bold;
  outline: inherit;
  border: none;
  cursor: pointer;
  height: 35px;

  padding: 8px 15px;
}

button:hover {
  background-color: white;
  outline: 2px black solid;
  color: black;
}

input,
select {
  border: 2px black solid;
  border-radius: 0;
  padding: 5px;
  min-height: 35px;
}

select:focus-visible,
input:focus-visible {
  border-radius: 0;
  outline: 1px grey solid;
}

/* Header */
.header {
  display: flex;
  justify-content: space-between;
  align-items: center;

  padding: 15px 10px;
  border-bottom: 3px black solid;
}

.header__logo {
  width: 40px;
  height: auto;
  object-fit: contain;
}

/* Utils */
.centered {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.padded {
  padding: 60px 25px;
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

.has-error {
  color: red;
}

.illustration--big {
  max-width: 1000px;
  height: auto;
  object-fit: contain;
}

